tests/snapshots/cli_insta__select.pre-release.missing.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - select
    - pre-release
    - 1.0.0
---
success: true
exit_code: 0
----- stdout -----
---
{}
----- stderr -----
