tests/snapshots/cli_insta__select.text.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - select
    - patch
    - 2.0.4
---
success: true
exit_code: 0
----- stdout -----
4

----- stderr -----
