tests/snapshots/cli_insta__sort.complex.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - sort
    - "--lexical-sorting"
    - "--fail-if-potentially-ambiguous"
    - 0.1.2+bm0
    - 0.1.2+bm1
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Failed a requirement "Potential Ambiguity Detected"
