tests/snapshots/cli_insta__sort.complex.2.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - sort
    - "--lexical-sorting"
    - "--flatten"
    - 0.1.2-rc0
    - 0.1.2-rc1
---
success: true
exit_code: 0
----- stdout -----
---
versions:
  - 0.1.2-rc0
  - 0.1.2-rc1
potentially_ambiguous: false
----- stderr -----
